# obs-plugintemplate

./: .gitignore  CMakeLists.txt  N-Air_suppriment.md  buildspec.json
src/: comment.c  gain-filter.c  plugin-main.c  sinwave.c
test/: main.js  package-lock.json  package.json
